fixed meters alignment

--- a/style.css
+++ b/style.css
@@ -60,7 +60,6 @@ body {
     height: 100%;
     display: flex; /* Using flex to allow meter to be in rows */
     justify-content: center; /* Centers meter horizontally */
-    margin-top: 50px;
   }
   .icon-vert-container {
      width: 100%; /* You can adjust this width to fit your layout */
@@ -70,14 +69,15 @@ body {
      align-items: center;
      
   }
+  meterContainer {
+    display:grid;
+    justify-items: center;
+  }
   /* The meter itself */
   meter {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    width: 200%; /* Set your desired width */
-    height: 20%; /* Set your desired height */
-    border-radius: 5px; /* Rounded corners */
+    width: 500%;
+    padding-left: 110px;
+    height: 7rem; /* Set your desired height */
     transform: rotate(-90deg);
   }
   meter::-webkit-meter-bar{
